snapshots/truth__resolve__tests__local_using_itself.snap
---
source: src/resolve/tests.rs
expression: "resolve_expect_err::<ast::Block>(r#\"{\n    int a = a;  // should fail at second `a`\n}\"#,\n                                 \"in this scope\").trim()"
---
error: unknown ECL register or variable 'a'
  ┌─ <input>:2:13
  │
2 │     int a = a;  // should fail at second `a`
  │             ^ not found in this scope
